@startuml attributes-system

' ==========================
'  Preamble
' ==========================

!include styledefs.iuml

title Attributes System Class Diagram\n

' ==========================
'  Definitions
' ==========================

class Player
{
    + $get $type("HealthAttribute")  Health
    + $get $type("StaminaAttribute") Stamina
    + $get $type("PoiseAttribute")   Poise
    + $get $type("StatusAttribute")  Status
    ..
    + $get $type("AttributesContainer") Attributes
}

interface IAttribute < T : ValueType >
{
    + $getset $type("T") Value
    '
    + $type("event") OnAttributeChanged(oldValue,newValue)
}

class HealthAttribute<float> implements IAttribute
class StaminaAttribute<float> implements IAttribute
class PoiseAttribute<float> implements IAttribute

enum CharacterStatus
{
    0 = None
    1 = Staggered
    2 = IFrames
    3 = Unstoppable
}

class StatusAttribute<CharacterStatus> implements IAttribute

class AttributesContainer
{
    + $get $type("IAttribute[]") Attributes
    '
    + $type("T") GetAttribute<T>()
}



class UIHealthBar $stereo("MonoBehaviour")
{
    - $type("void") OnHealthChanged(old, new)
}

class PlayerBody
{
    - $type("void") OnPoiseChanged(old,new)
    - $type("void") PerformStagger()
}

' ==========================
'  Relationships
' ==========================

Player *-- AttributesContainer
PoiseAttribute --> PlayerBody : Change\nSignals
AttributesContainer "1" o-- "1..*" IAttribute
StatusAttribute o-- CharacterStatus
HealthAttribute --> UIHealthBar : Change\nSignals

' ==========================
'  Notes
' ==========================

note left of PlayerBody
    Perform stagger
    animation when
    Poise value is
    changed to "0".
end note

note left of AttributesContainer::GetAttribute
    T is IAttribute
end note

' ==========================

@enduml